# AMT-Client-Launcher

./: .gitignore  build.sh  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: main.rs
src-tauri/src/app/: backup.rs  client_api.rs  encryption.rs  github.rs  mod.rs  modrinth.rs  options.rs  rcon.rs  server.rs  social.rs  tunnel.rs  webview.rs  world.rs
src-tauri/src/app/gui/: mod.rs
src-tauri/src/app/gui/commands/: auth.rs  client.rs  data.rs  github.rs  mod.rs  modrinth_cmd.rs  rcon_cmd.rs  server_backup_cmd.rs  server_cmd.rs  server_files_cmd.rs  server_mods_cmd.rs  server_world_cmd.rs  social_cmd.rs  system.rs  tunnel_cmd.rs
src-tauri/src/minecraft/: auth.rs  prelauncher.rs  progress.rs  version.rs
src-tauri/src/minecraft/java/: jre_downloader.rs  runtime.rs
src-tauri/src/minecraft/launcher/: client_jar.rs  libraries.rs  mod.rs
src-tauri/src/utils/: download.rs  extract.rs  hosts.rs  sys.rs
src/lib/: Window.svelte
src/lib/amt/: BadgeChip.svelte  BadgeEditor.svelte  Logo.svelte  ProfileCard.svelte
src/lib/cape/: CapeDesigner.svelte
src/lib/common/: Logo.svelte  ToolTip.svelte
src/lib/cosmetics/: CosmeticsGallery.svelte  CosmeticsHub.svelte  UploadCape.svelte
src/lib/i18n/: de.json  en.json  index.js  pl.json
src/lib/identity/: IdentitySettings.svelte
src/lib/login/: Facts.svelte  LoginScreen.svelte
src/lib/main/: Account.svelte  ContentWrapper.svelte  ErrorScreen.svelte  FirstRunWarning.svelte  LaunchArea.svelte  MainHeader.svelte  MainScreen.svelte  NonSecureConnectionScreen.svelte  VersionSelect.svelte  VersionWarning.svelte
src/lib/modrinth/: ModrinthHub.svelte
src/lib/server/: CreateServerWizard.svelte  ServerBackups.svelte  ServerDashboard.svelte  ServerFileManager.svelte  ServerHub.svelte  ServerPlayers.svelte  ServerStats.svelte  ServerTerminal.svelte  ServerWorld.svelte
src/lib/settings/: AMTSettings.svelte  AppearanceSettings.svelte  LauncherVersion.svelte  SettingsContainer.svelte  TextSetting.svelte  ToggleSetting.svelte
(+12 files in other folders)
