[package]
name = "amt-client"
version = "0.1.0"
description = "AMT Client - A performance-focused Minecraft Launcher and Client"
authors = ["AMT Team"]
license = "GNU General Public License v3.0"
homepage = ""
repository = ""
edition = "2021"
rust-version = "1.79.0"

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
# Log
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"

# Async IO
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
backon = { version = "1.3.0", default-features = false, features = ["tokio-sleep"] }

# Generic
void = "1"
directories = "5.0"
once_cell = "1.16.0"

# FS libs
async_zip = { version = "0.0.11", features = ["full"] }
tokio-tar = "0.3.0"
async-compression = { version= "0.3.15", features = ["gzip"] }
sanitize-filename = "0.6.0"
path-absolutize = "3.0"

# OS
os_info = "3"
sysinfo = "0.29"

# Data
regex = "1.7.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
md5 = "0.7.0"
sha1 = "0.10"
base16ct = {version = "0.2.0", features = ["alloc"] }
aes-gcm = "0.10"
base64 = "0.22"

# UI library
tauri = { version = "^2", features = [] }
tauri-plugin-process = "^2"
tauri-plugin-dialog = "^2"
tauri-plugin-opener = "^2"
tauri-plugin-clipboard-manager = "^2"

# Client libs
oauth2 = { git = "https://github.com/martijnberger/oauth2-rs.git", rev = "8851eb63bbeeb25a64a0fbf842a7f9160a7d9be6", default-features = false, features = ["reqwest", "rustls"] }
azalea-auth = { git = "https://github.com/CCBlueX/azalea.git", rev = "b84734378d4f9028747970a6e528a5846c5391a6", package = "azalea-auth" }

# Data serialization libs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
igd = "0.12"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
lto = true
codegen-units = 1
